--- a/invessence/modules/iAdvice/src/main/webapp/addon/page3.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/addon/page3.xhtml
@@ -28,6 +28,16 @@
                 </td>
 
             </tr>
+	    <tr>
+		<td colspan="3"><div class="EmptyBox5"></div></td>
+	    </tr>
+       	    <tr>
+		<td colspan="3">
+		   <div class="Fs8 TexAlCenter">
+			Please move to the spot on the bar with the most appropriate value
+		   </div>
+		</td>
+	    </tr>
         </table>
         <div class="EmptyBox30"></div>
 
