--- a/invessence/modules/iAdvice/src/main/webapp/faqURL.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/faqURL.xhtml
@@ -10,10 +10,7 @@
     </f:metadata>
 
     <ui:define name="content">
-            <p:lightBox iframe="true">
-                <h:outputLink id="mylink" value="http://www.invessence.com/faq/">
-                </h:outputLink>
-            </p:lightBox>
+        <ui:include src="html/ltamFAQ.html"/>
     </ui:define>
 
 </ui:composition>
