--- a/invessence/modules/iAdvice/src/main/webapp/addon/page4.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/addon/page4.xhtml
@@ -13,7 +13,7 @@
         </h2>
 
         <!--ltamDownArrow-->
-        <p:panel styleClass="Container100 Responsive100" style="border: 0px">
+        <p:panel id="page4table" styleClass="Container100 Responsive100" style="border: 0px">
             <div class="EmptyBox5"/>
 
             <p:selectOneRadio id="customRadio" value="#{ltamprofile.ans4}" layout="custom"
@@ -29,41 +29,64 @@
             <h:panelGrid styleClass="page4table" columns="4" cellpadding="0">
                 <p:radioButton id="opt1" for="customRadio" itemIndex="0"/>
                 <h:outputLabel for="opt1" value="$0"/>
-                <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(1)}"/>
-                <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(1)}">
-                    <f:ajax event="mouseover" listener="#{ltamprofile.setHoverImage(1)}" update=":ltamForm:page4table"/>
-                    <f:ajax event="click" listener="#{ltamprofile.setImage(1)}"
-                            update=":ltamForm:page4table"/>
-                </p:graphicImage>
-                <p:outputLabel value="(0%)"/>
+                <p:commandLink id="img1" update=":ltamForm:page4table"
+                               ajax="true" 
+                               actionListener="#{ltamprofile.image(1)}"
+                               onfocus="ltamprofile.hoverImage(1)">
+                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(1)}"/>
+                    <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(1)}">
+                    </p:graphicImage>
+                </p:commandLink>
+                <p:outputLabel for="opt1" value="(0%)"/>
 
                 <p:radioButton id="opt2" for="customRadio" itemIndex="1"/>
-                <h:outputLabel for="opt1" value="-#{dataDisplayConverter.displayAsMoney(ltamprofile.investment * 0.05)}"/>
-                <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(2)}"/>
-                <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(2)}">
-                </p:graphicImage>
-                <p:outputLabel value="( - 5%)"/>
+                <h:outputLabel for="opt2" value="-#{dataDisplayConverter.displayAsMoney(ltamprofile.investment * 0.05)}"/>
+                <p:commandLink id="img2" update=":ltamForm:page4table"
+                               ajax="true" immediate="true"
+                               actionListener="#{ltamprofile.image(2)}"
+                               onfocus="ltamprofile.hoverImage(2)">
+                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(2)}"/>
+                    <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(2)}">
+                    </p:graphicImage>
+                </p:commandLink>
+                <p:outputLabel for="opt2" value="( - 5%)"/>
 
                 <p:radioButton id="opt3" for="customRadio" itemIndex="2"/>
-                <h:outputLabel for="opt1" value="-#{dataDisplayConverter.displayAsMoney(ltamprofile.investment * 0.10)}"/>
-                <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(3)}"/>
-                <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(3)}">
-                </p:graphicImage>
-                <p:outputLabel value="( - 10%)"/>
+                <h:outputLabel for="opt3" value="-#{dataDisplayConverter.displayAsMoney(ltamprofile.investment * 0.10)}"/>
+                <p:commandLink id="img3" update=":ltamForm:page4table"
+                               ajax="true" immediate="true"
+                               actionListener="#{ltamprofile.image(3)}"
+                               onfocus="ltamprofile.hoverImage(3)">
+                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(3)}"/>
+                    <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(3)}">
+                    </p:graphicImage>
+                </p:commandLink>
+                <p:outputLabel for="opt3" value="( - 10%)"/>
 
                 <p:radioButton id="opt4" for="customRadio" itemIndex="3"/>
-                <h:outputLabel for="opt1" value="-#{dataDisplayConverter.displayAsMoney(ltamprofile.investment * 0.15)}"/>
-                <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(4)}"/>
-                <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(4)}">
-                </p:graphicImage>
-                <p:outputLabel value="( - 15%)"/>
+                <h:outputLabel for="opt4" value="-#{dataDisplayConverter.displayAsMoney(ltamprofile.investment * 0.15)}"/>
+                <p:commandLink id="img4" update=":ltamForm:page4table"
+                               ajax="true" immediate="true"
+                               actionListener="#{ltamprofile.image(4)}"
+                               onfocus="ltamprofile.hoverImage(4)">
+                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(4)}"/>
+                    <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(4)}">
+                    </p:graphicImage>
+                </p:commandLink>
+                <p:outputLabel for="opt4" value="( - 15%)"/>
 
                 <p:radioButton id="opt5" for="customRadio" itemIndex="4"/>
-                <h:outputLabel for="opt1" value="-#{dataDisplayConverter.displayAsMoney(ltamprofile.investment * 0.25)}"/>
-                <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(5)}"/>
-                <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(5)}">
-                </p:graphicImage>
-                <p:outputLabel value="( - 25%)"/>
+                <h:outputLabel for="opt5" value="-#{dataDisplayConverter.displayAsMoney(ltamprofile.investment * 0.25)}"/>
+                <p:commandLink id="img5" update=":ltamForm:page4table"
+                               ajax="true" immediate="true"
+                               actionListener="#{ltamprofile.image(5)}"
+                               onfocus="ltamprofile.hoverImage(5)">
+                    <p:graphicImage name="images/arrowtickS.svg" library="ltam" style="height: 40px" rendered="#{ltamprofile.isImageSelected(5)}"/>
+                    <p:graphicImage name="images/arrowtick.svg" library="ltam" style="height: 40px" rendered="#{! ltamprofile.isImageSelected(5)}">
+                    </p:graphicImage>
+                </p:commandLink>
+                <p:outputLabel for="opt5" value="( - 25%)"/>
+
 
                 <h:outputLabel id="opt6" value="" for="customRadio" itemIndex="5"/>
                 <h:outputLabel value=""/>
