--- a/invessence/modules/iAdvice/src/main/webapp/gemini.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/gemini.xhtml
@@ -17,36 +17,46 @@
                 <table>
                     <tr>
                         <td>User ID</td>
-                        <td><input type="text" name="TimeToSaveUserId" value="ABC123"/></td>
+                        <td><input type="text" name="TimeToSaveUserId" value="#{ltamtest.timeToSaveID}"/></td>
                     </tr>
                     <tr>
                         <td>Investor First Name</td>
-                        <td><input type="text" name="InvestorFirstName" value="FirstName"/></td>
+                        <td><input type="text" name="InvestorFirstName" value="#{ltamtest.firstname}"/></td>
                     </tr>
                     <tr>
                         <td>Investor Last Name</td>
-                        <td><input type="text" name="InvestorLastName" value="LastName"/></td>
+                        <td><input type="text" name="InvestorLastName" value="#{ltamtest.lastname}"/></td>
                     </tr>
                     <tr>
                         <td>Fund Selection</td>
-                        <td><input type="text" name="FundSelection" value="Fund"/></td>
+                        <td><input type="text" name="FundSelection" value="#{ltamtest.fund}"/></td>
                     </tr>
                     <tr>
                         <td>Dollar Amount</td>
-                        <td><input type="text" name="DollarAmount" value="1500"/></td>
+                        <td><input type="text" name="DollarAmount" value="#{ltamtest.amount}"/></td>
                     </tr>
                     <tr>
                         <td>Unique User Identifier</td>
-                        <td><input type="text" name="UniqueUserIdentifier" value="53"/></td>
+                        <td><input type="text" name="UniqueUserIdentifier" value="#{ltamtest.uid}"/></td>
                     </tr>
                     <tr>
                         <td>Rep Referral ID</td>
-                        <td><input type="text" name="RepReferralId" value="REP"/></td>
+                        <td><input type="text" name="RepReferralId" value="#{ltamtest.advisor}"/></td>
                     </tr>
                 </table>
-                <input type="submit" value="Submit"/>
+                <a href="/start.xhtml">
+                    <img class="startover"/>
+                </a>
+                <a href="/start.xhtml">
+                    <img src="#{resource['ltam:images/startover.png']}"/>
+                </a>
+                <h:commandButton type="submit" styleClass="openaccount" />
             </p:panel>
         </form>
+        <h:form>
+            <p:commandButton value="About" icon="ui-icon-extlink" actionListener="#{uiLayout.aboutusURL}" />
+            <p:commandButton value="Faq" icon="ui-icon-extlink" actionListener="#{uiLayout.faqURL}" />
+        </h:form>
 
 
     </ui:define>
