--- a/invessence/modules/iAdvice/src/main/webapp/review.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/review.xhtml
@@ -10,9 +10,6 @@
 <h:outputScript name="/js/ltamCharts.js" library="ltam"/>
 
 <!-- BOX START -->
-<h:form id="ltamForm" method="post"
-      action="http://test.geminifund.com/newaccountswizardnew/pages/testFormPost.aspx"
-      target="_self">
 <p:panel id="contentpanel" style="border: 0px; background: transparent">
 
 <div class="layout-portlets-box">
@@ -20,102 +17,91 @@
     <div class="Container100 Responsive100">
         <div class="Container100 Responsive100">
             <div class="ContainerIndent Responsive100">
-                            <p:steps id="ltamprogressbar" activeIndex="#{ltamprofile.ltammenu}">
-                                <p:menuitem value="Start"/>
-                                <p:menuitem value="Goal" />
-                                <p:menuitem value="Horizon"/>
-                                <p:menuitem value="Risk"/>
-                                <p:menuitem value="Risk"/>
-                                <p:menuitem value="Risk"/>
-                                <p:menuitem value="Review"/>
-                            </p:steps>
-           </div>
+                <p:steps id="ltamprogressbar" activeIndex="#{ltamprofile.ltammenu}">
+                    <p:menuitem value="Start"/>
+                    <p:menuitem value="Goal"/>
+                    <p:menuitem value="Horizon"/>
+                    <p:menuitem value="Risk"/>
+                    <p:menuitem value="Risk"/>
+                    <p:menuitem value="Risk"/>
+                    <p:menuitem value="Review"/>
+                </p:steps>
+            </div>
             <div class="Container100 Responsive100">
                 <div class="ContainerIndent Responsive100">
-                  <p:messages showDetail="false" escape="true" closable="true"/>
+                    <p:messages showDetail="false" escape="true" closable="true"/>
                 </div>
-             </div>
+            </div>
         </div>
-   </div>
+    </div>
     <div class="Container100 Responsive100">
         <div class="Container60 Responsive100">
-            <p:panel id="inputArea" style="border: 0px; background: transparent; height: 270px">
-                <ui:fragment rendered="#{ltamprofile.pagemanager.page == 0}">
-                    <ui:fragment rendered="#{ltamprofile.visitorMode}">
-                        <ui:include src="/addon/page1.xhtml"/>
-                    </ui:fragment>
-                    <ui:fragment rendered="#{ltamprofile.visitorMode ? 'false' : 'true'}">
-                        <ui:include src="/addon/page1A.xhtml"/>
-                    </ui:fragment>
-                </ui:fragment>
-                <ui:fragment rendered="#{ltamprofile.pagemanager.page == 1}">
-                    <ui:include src="/addon/page2.xhtml"/>
-                </ui:fragment>
-                <ui:fragment rendered="#{ltamprofile.pagemanager.page == 2}">
-                    <ui:include src="/addon/page3.xhtml"/>
-                </ui:fragment>
-                <ui:fragment rendered="#{ltamprofile.pagemanager.page == 3}">
-                    <ui:include src="/addon/page4.xhtml"/>
-                </ui:fragment>
-                <ui:fragment rendered="#{ltamprofile.pagemanager.page == 4}">
-                    <ui:include src="/addon/page5.xhtml"/>
-                </ui:fragment>
-                <ui:fragment rendered="#{ltamprofile.pagemanager.page == 5}">
-                    <ui:include src="/addon/page6.xhtml"/>
-                </ui:fragment>
-                <ui:fragment rendered="#{ltamprofile.pagemanager.page == 6}">
+            <form id="_id0" method="post"
+                  action="http://test.geminifund.com/newaccountswizardnew/pages/testFormPost.aspx"
+                  target="_self">
+                <p:panel id="inputArea" style="border: 0px; background: transparent; height: 270px">
                     <ui:include src="/addon/final.xhtml"/>
-                </ui:fragment>
-
-                <div class="EmptyBox10"/>
-                <f:facet name="footer">
-			<h:commandButton action="#{ltamprofile.firstPage}" styleClass="startover" />
-			<h:commandButton type="submit" styleClass="openaccount" />
-                </f:facet>
-            </p:panel>
+                    <div class="EmptyBox10"/>
+                    <input type="hidden" name="TimeToSaveUserId" value="#{ltamprofile.timeToSaveID}"/>
+                    <input type="hidden" name="InvestorFirstName" value="#{ltamprofile.firstname}"/>
+                    <input type="hidden" name="InvestorLastName" value="#{ltamprofile.lastname}"/>
+                    <input type="hidden" name="FundSelection" value="#{ltamprofile.theme}"/>
+                    <input type="hidden" name="DollarAmount" value="#{ltamprofile.investment}"/>
+                    <input type="hidden" name="UniqueUserIdentifier" value="#{ltamprofile.acctnum}"/>
+                    <input type="hidden" name="RepReferralId" value="#{ltamprofile.advisor}"/>
+                    <f:facet name="footer">
+                        <div class="Fleft">
+                            <a href="/start.xhtml">
+                                <img src="#{resource['ltam:images/startover.png']}"/>
+                            </a>
+                        </div>
+                        <h:commandButton type="submit" styleClass="openaccount"/>
+                    </f:facet>
+                </p:panel>
+            </form>
         </div>
         <div class="Container40 Responsive100">
             <div class="ContainerIndent">
                 <p:panel id="graphArea" style="border: 0px; background: transparent"
                          rendered="#{ltamprofile.displayRiskMeter}">
-                        <div class="EmptyBox5"></div>
-                        <div class="Container100 Responsive100">
-                            <p:panel style="border: 0px; background: transparent"
-                                     rendered="#{ltamprofile.displayMeter}">
-                              <div class="EmptyBox5"></div>
-                                <div class="Container100 Responsive100">
-                                    <table style="width: 100%">
-                                        <tr>
-                                            <td colspan="3">
-                                                <div class="TexAlCenter" style="font-size: 1.5em">
-                                                    Your current risk level is
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td colspan="3">
-                                                <div class="EmptyBox5"></div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td style="width: 5%; text-align: right; vertical-align: middle">Low</td>
-                                            <td style="width: 90%; text-align: center; vertical-align: middle">
-                                                <ui:repeat var="tlist" value="#{ltamprofile.themeList}">
-                                                    <h:graphicImage name="images/riskMeter.svg" library="ltam"
-                                                                    rendered="#{ltamprofile.themeData.sortorder != tlist.sortorder}"
-                                                                    style="width: 20%; background: transparent"
-                                                                    styleClass="Fleft"/>
-                                                    <h:graphicImage name="images/SriskMeter.svg" library="ltam"
-                                                                    rendered="#{ltamprofile.themeData.sortorder == tlist.sortorder}"
-                                                                    style="width: 20%; background: transparent"
-                                                                    styleClass="Fleft"/>
-                                                </ui:repeat>
-                                            </td>
-                                            <td style="width: 5%; text-align: left; vertical-align: middle">High </td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </p:panel>
+                    <div class="EmptyBox5"></div>
+                    <div class="Container100 Responsive100">
+                        <p:panel style="border: 0px; background: transparent"
+                                 rendered="#{ltamprofile.displayMeter}">
+                            <div class="EmptyBox5"></div>
+                            <div class="Container100 Responsive100">
+                                <table style="width: 100%">
+                                    <tr>
+                                        <td colspan="3">
+                                            <div class="TexAlCenter" style="font-size: 1.5em">
+                                                Your current risk level is
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="3">
+                                            <div class="EmptyBox5"></div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="width: 5%; text-align: right; vertical-align: middle">Low</td>
+                                        <td style="width: 90%; text-align: center; vertical-align: middle">
+                                            <ui:repeat var="tlist" value="#{ltamprofile.themeList}">
+                                                <h:graphicImage name="images/riskMeter.svg" library="ltam"
+                                                                rendered="#{ltamprofile.themeData.sortorder != tlist.sortorder}"
+                                                                style="width: 20%; background: transparent"
+                                                                styleClass="Fleft"/>
+                                                <h:graphicImage name="images/SriskMeter.svg" library="ltam"
+                                                                rendered="#{ltamprofile.themeData.sortorder == tlist.sortorder}"
+                                                                style="width: 20%; background: transparent"
+                                                                styleClass="Fleft"/>
+                                            </ui:repeat>
+                                        </td>
+                                        <td style="width: 5%; text-align: left; vertical-align: middle">High</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </p:panel>
 
                     </div>
                     <div class="Container100 Responsive100">
@@ -136,9 +122,9 @@
                                         </div>
                                     </div>
                                     <div class="Container100  Fleft">
-                                       <div class="ContainerIndent TexAlCenter">
-                                           <h:outputText id="showSliceID" value="#{ltamprofile.selectedPie}"></h:outputText>
-                                       </div>
+                                        <div class="ContainerIndent TexAlCenter">
+                                            <h:outputText id="showSliceID" value="#{ltamprofile.selectedPie}"></h:outputText>
+                                        </div>
                                     </div>
                                 </p:panel>
                                 <p:panel style="border: 0px; background: transparent"
@@ -241,58 +227,78 @@
 
                 <p:column styleClass="Wid5 TexAlCenter Fs12">
                     <f:facet name="header">
-                        <h:outputText value="#{pdata.header1}"/>
+                        <h:outputText value="Since Inception"/>
                     </f:facet>
                     <h:outputText value="#{pdata.value1}"/>
                 </p:column>
 
-                <p:column styleClass="Wid5 TexAlCenter Fs12"
-                          headerText="#{pdata.header2}">
+                <p:column styleClass="Wid5 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2006"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value2}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid5 TexAlCenter Fs12"
-                          headerText="#{pdata.header3}">
+                <p:column styleClass="Wid5 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2007"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value3}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid5 TexAlCenter Fs12"
-                          headerText="#{pdata.header4}">
+                <p:column styleClass="Wid5 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2008"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value4}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid5 TexAlCenter Fs12"
-                          headerText="#{pdata.header5}">
+                <p:column styleClass="Wid5 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2009"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value5}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid5 TexAlCenter Fs12"
-                          headerText="#{pdata.header6}">
+                <p:column styleClass="Wid5 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2010"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value6}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid10 TexAlCenter Fs12"
-                          headerText="#{pdata.header7}">
+                <p:column styleClass="Wid10 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2011"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value7}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid5 TexAlCenter Fs12"
-                          headerText="#{pdata.header8}">
+                <p:column styleClass="Wid5 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2012"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value8}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid10 TexAlCenter Fs12"
-                          headerText="#{pdata.header9}">
+                <p:column styleClass="Wid10 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2013"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value9}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid5 TexAlCenter Fs12"
-                          headerText="#{pdata.header10}">
+                <p:column styleClass="Wid5 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2014"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value10}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
-                <p:column styleClass="Wid5 TexAlCenter Fs12"
-                          headerText="#{pdata.header11}">
+                <p:column styleClass="Wid5 TexAlCenter Fs12">
+                    <f:facet name="header">
+                        <h:outputText value="2015 YTD"/>
+                    </f:facet>
                     <h:outputText value="#{pdata.value11}" styleClass="TexAlCenter">
                     </h:outputText>
                 </p:column>
@@ -309,17 +315,6 @@
 </p:outputPanel>
 
 </p:panel>
-
-<input type="hidden" name="TimeToSaveUserId" value="#{ltamprofile.timeToSaveID}"/>
-<input type="hidden" name="InvestorFirstName" value="#{ltamprofile.firstname}"/>
-<input type="hidden" name="InvestorLastName" value="#{ltamprofile.lastname}"/>
-<input type="hidden" name="FundSelection" value="#{ltamprofile.firstname}"/>
-<input type="hidden" name="DollarAmount" value="#{ltamprofile.investment}"/>
-<input type="hidden" name="UniqueUserIdentifier" value="#{ltamprofile.acctnum}"/>
-<input type="hidden" name="RepReferralId" value="#{ltamprofile.advisor}"/>
-
-</h:form>
-
 
 </ui:define>
 
