--- a/invessence/modules/iAdvice/src/main/webapp/start.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/start.xhtml
@@ -23,7 +23,7 @@
 <h:form id="ltamForm">
 <p:dialog widgetVar="dlgWelcome" closable="false" appendTo="@(body)"
           visible="#{ltamprofile.welcomeDialog}">
-    <p:panel id="intropanel" style="border: 0px; background: transparent; width: 400px">
+    <p:panel id="intropanel" style="border: 0px; background: transparent; width: 500px">
 
         <div class="layout-portlets-box">
 
@@ -37,19 +37,19 @@
 
                         <div class="EmptyBox10"></div>
                         Clients have trusted Ladenburg Thalmann Asset Management
-                        to manage over $2 billion of their assets.<br/>
-
+                        to manage over $2 billion of their assets.
                         <div class="EmptyBox20"></div>
                         See what LTAM has to offer by answering a few short questions
                         to help us build you a risk managed portfolio customized to your
                         financial needs.
                         <div class="EmptyBox10"></div>
                         <div class="Fs8 TexAlCenter">
-                            You are leaving the website of individual(s) who are registered representatives
-                            of an  Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and have
-                            entered LTAM's iAdvice Website. The individual(s) of the Affiliate will receive a
-                            referral fee for referring you to this site.
+                            You are leaving the website of individual(s) who are registered representatives of an
+                            Affiliate of Ladenburg Thalmann Asset Management, Inc. (LTAM) and have entered LTAM's
+                            iAdvice Website. The individual(s) of the Affiliate and the Affiliate may receive a referral fee
+                            for referring you to this site.
                         </div>
+                        <div class="EmptyBox10"></div>
                         <p:commandButton value="Get Started"
                                          onclick="PF('dlgWelcome').hide()">
                         </p:commandButton>
@@ -89,10 +89,10 @@
         <div class="Container60 Responsive100">
             <p:panel id="inputArea" style="border: 0px; background: transparent; height: 270px">
                 <ui:fragment rendered="#{ltamprofile.pagemanager.page == 0}">
-                    <ui:fragment rendered="#{ltamprofile.visitorMode}">
+                    <ui:fragment rendered="#{! ltamprofile.time2SaveWelcome}">
                         <ui:include src="/addon/page1.xhtml"/>
                     </ui:fragment>
-                    <ui:fragment rendered="#{ltamprofile.visitorMode ? 'false' : 'true'}">
+                    <ui:fragment rendered="#{ltamprofile.time2SaveWelcome}">
                         <ui:include src="/addon/page1A.xhtml"/>
                     </ui:fragment>
                 </ui:fragment>
@@ -103,42 +103,23 @@
                     <ui:include src="/addon/page3.xhtml"/>
                 </ui:fragment>
                 <ui:fragment rendered="#{ltamprofile.pagemanager.page == 3}">
-                    <ui:include src="/addon/page4.xhtml"/>
+                    <ui:include src="/addon/page5.xhtml"/>
                 </ui:fragment>
                 <ui:fragment rendered="#{ltamprofile.pagemanager.page == 4}">
-                    <ui:include src="/addon/page5.xhtml"/>
+                    <ui:include src="/addon/page4.xhtml"/>
                 </ui:fragment>
                 <ui:fragment rendered="#{ltamprofile.pagemanager.page == 5}">
                     <ui:include src="/addon/page6.xhtml"/>
                 </ui:fragment>
-                <ui:fragment rendered="#{ltamprofile.pagemanager.page == 6}">
-                    <ui:include src="/addon/final.xhtml"/>
-                </ui:fragment>
 
                 <div class="EmptyBox10"/>
                 <f:facet name="footer">
-                    <ui:fragment rendered="#{ltamprofile.pagemanager.page == 6}">
-                        <p:commandLink
-                                styleClass="Fleft"
-                                update=":ltamForm:contentpanel"
-                                actionListener="#{ltamprofile.firstPage}">
-                            <h:graphicImage name="images/startover.png" library="ltam"/>
-                        </p:commandLink>
-                        <p:commandLink
-                                styleClass="Fright"
-                                update=":ltamForm:contentpanel"
-                                actionListener="#{ltamprofile.forwardData}">
-                            <h:graphicImage name="images/openaccount.png" library="ltam"/>
-                        </p:commandLink>
-                    </ui:fragment>
-                    <ui:fragment rendered="#{ltamprofile.pagemanager.page != 6}">
-                        <p:commandButton value="Previous" styleClass="Fleft" rendered="#{ltamprofile.pagemanager.prevButtonStat}"
-                                         update=":ltamForm:contentpanel"
-                                         actionListener="#{ltamprofile.prevPage}"/>
-                        <p:commandButton value="Next" styleClass="Fright" rendered="#{ltamprofile.pagemanager.nextButtonStat}"
-                                         update=":ltamForm:contentpanel"
-                                         actionListener="#{ltamprofile.nextPage}"/>
-                    </ui:fragment>
+                     <p:commandButton value="Previous" styleClass="Fleft" rendered="#{ltamprofile.pagemanager.prevButtonStat}"
+                                      update=":ltamForm:contentpanel"
+                                      actionListener="#{ltamprofile.prevPage}"/>
+                     <p:commandButton value="Next" styleClass="Fright" rendered="#{ltamprofile.pagemanager.nextButtonStat}"
+                                      update=":ltamForm:contentpanel"
+                                      actionListener="#{ltamprofile.nextPage}"/>
                 </f:facet>
             </p:panel>
         </div>
@@ -202,11 +183,6 @@
                                                 </p:chart>
                                             </p:outputPanel>
                                         </div>
-                                    </div>
-                                    <div class="Container100  Fleft">
-                                       <div class="ContainerIndent TexAlCenter">
-                                           <h:outputText id="showSliceID" value="#{ltamprofile.selectedPie}"></h:outputText>
-                                       </div>
                                     </div>
                                 </p:panel>
                                 <p:panel style="border: 0px; background: transparent"
