--- a/invessence/modules/iAdvice/src/main/webapp/addon/final.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/addon/final.xhtml
@@ -7,7 +7,7 @@
 
     <div class="Container100 Responsive50 TextAlCenter">
         <div class="TexAlCenter">
-            <h1>#{ltamprofile.firstname}, Based on your answers, recommended objective is:</h1>
+            <h1>#{ltamprofile.firstname}, based on your answers, recommended objective is:</h1>
         </div>
         <div class="EmptyBox20"></div>
         <table class="Container100 Responsive100 TextAlCenter">
