--- a/invessence/modules/iAdvice/src/main/webapp/addon/page3.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/addon/page3.xhtml
@@ -15,12 +15,12 @@
         <table class="Container100 Responsive100" style="border: 0px">
             <tr>
                 <td style="width: 15%; text-align: right; vertical-align: middle">
-                    <h:outputText value="5 Years"/>
+                    <h:outputText value="1 Year"/>
                 </td>
                 <td style="width: 70%; text-align: center">
                     <p:slider for="horizon" display="displayHorizon"
                               displayTemplate="{value} Years"
-                            minValue="5" maxValue="15"/>
+                            minValue="1" maxValue="15"/>
                     <h:inputHidden id="horizon" value="#{ltamprofile.horizon}"/>
                 </td>
                 <td style="width: 15%; text-align: left; vertical-align: middle">
