--- a/invessence/modules/iAdvice/src/main/webapp/addon/page6.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/addon/page6.xhtml
@@ -23,7 +23,7 @@ long-term gains. Your tolerance for risk is:
         <table class="Container100 Responsive100" style="border: 0px">
             <tr>
                 <td style="width: 17%; text-align: right; vertical-align: middle; padding-right: 10px">
-                    <h:outputText value="More Bonds"/>
+                    <h:outputText value="Lowest"/>
                 </td>
                 <td style="width: 65%; text-align: center">
                     <p:slider for="ans6" minValue="1" maxValue="5" step="1">
@@ -31,7 +31,7 @@ long-term gains. Your tolerance for risk is:
                     </p:slider>
                 </td>
                 <td style="width: 17%; text-align: left; vertical-align: middle; padding-left: 10px">
-                    <h:outputText value="More Stocks"/>
+                    <h:outputText value="Highest"/>
                 </td>
 
             </tr>
@@ -43,7 +43,7 @@ long-term gains. Your tolerance for risk is:
 	    <tr>
                 <td colspan="3">
         		<div class="Fs8 TexAlCenter">
-				Please move to the spot on the bar with the most appropriate value
+				Please move to the spot on the bar with the most appropriate risk tolerance
 		        </div>
                 </td>
             </tr>
