--- a/invessence/modules/iAdvice/src/main/webapp/start.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/start.xhtml
@@ -7,6 +7,7 @@
                 template="/WEB-INF/template.xhtml">
 
 <f:metadata>
+    <f:viewParam name="mode" value="#{ltamprofile.mode}"/>
     <f:viewParam name="advisor" value="#{ltamprofile.beanAdvisor}"/>
     <f:viewParam name="rep" value="#{ltamprofile.beanRep}"/>
     <f:viewParam name="TimeToSaveID" value="#{ltamprofile.beanTimeToSaveID}"/>
