--- a/invessence/modules/iAdvice/src/main/webapp/WEB-INF/template.xhtml
+++ b/invessence/modules/iAdvice/src/main/webapp/WEB-INF/template.xhtml
@@ -68,7 +68,7 @@
 
         <p:dialog header="About Us" widgetVar="aboutusDlg" modal="true"
                   resizable="true" height="500" width="700" closable="true">
-
+            <ui:include src="/html/ltamaboutus.xhtml"/>
         </p:dialog>
 
         <h:outputStylesheet name="css/core-layout.css" library="#{uiLayout.uiprofile.themelib}" />
